@@ -1,177 +1,3 @@
-//package com.skybooker.seat.service;
-//
-//import com.skybooker.seat.dto.SeatRequest;
-//import com.skybooker.seat.dto.SeatResponse;
-//import com.skybooker.seat.entity.Seat;
-//import com.skybooker.seat.repository.SeatRepository;
-//import lombok.RequiredArgsConstructor;
-//import org.springframework.scheduling.annotation.Scheduled;
-//import org.springframework.stereotype.Service;
-//
-//import java.time.LocalDateTime;
-//import java.util.List;
-//import java.util.stream.Collectors;
-//
-//@Service
-//@RequiredArgsConstructor
-//public class SeatServiceImpl implements SeatService {
-//
-//    private final SeatRepository seatRepository;
-//
-//    @Override
-//    public SeatResponse addSeat(SeatRequest request) {
-//        boolean exists = seatRepository
-//                .findByFlightIdAndSeatNumber(request.getFlightId(), request.getSeatNumber())
-//                .isPresent();
-//        if (exists) {
-//            throw new RuntimeException("Seat " + request.getSeatNumber()
-//                    + " already exists for flight: " + request.getFlightId());
-//        }
-//
-//        Seat seat = new Seat();
-//        seat.setFlightId(request.getFlightId());
-//        seat.setSeatNumber(request.getSeatNumber());
-//        seat.setSeatClass(request.getSeatClass());
-//        seat.setRow(request.getRow());
-//        seat.setColumn(request.getColumn());
-//        seat.setWindow(request.isWindow());
-//        seat.setAisle(request.isAisle());
-//        seat.setHasExtraLegroom(request.isHasExtraLegroom());
-//        seat.setPriceMultiplier(request.getPriceMultiplier());
-//        seat.setStatus("AVAILABLE");
-//
-//        Seat saved = seatRepository.save(seat);
-//        return mapToResponse(saved, "Seat added successfully");
-//    }
-//
-//    @Override
-//    public List<SeatResponse> getSeatsByFlight(Long flightId) {
-//        return seatRepository.findByFlightId(flightId)
-//                .stream()
-//                .map(s -> mapToResponse(s, "Success"))
-//                .collect(Collectors.toList());
-//    }
-//
-//    // FIX: AVAILABLE + HELD + CONFIRMED sab return karo
-//    // Frontend status ke hisaab se color dikhayega — sirf AVAILABLE clickable hogi
-//    @Override
-//    public List<SeatResponse> getAvailableSeats(Long flightId) {
-//        return seatRepository.findByFlightId(flightId)
-//                .stream()
-//                .map(s -> mapToResponse(s, "Success"))
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public List<SeatResponse> getSeatsByClass(Long flightId, String seatClass) {
-//        return seatRepository.findByFlightIdAndSeatClass(flightId, seatClass)
-//                .stream()
-//                .map(s -> mapToResponse(s, "Success"))
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public SeatResponse holdSeat(Long flightId, String seatNumber) {
-//        Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
-//                .orElseThrow(() -> new RuntimeException("Seat not found: " + seatNumber));
-//
-//        if (!seat.getStatus().equals("AVAILABLE")) {
-//            throw new RuntimeException("Seat " + seatNumber
-//                    + " is not available. Current status: " + seat.getStatus());
-//        }
-//
-//        seat.setStatus("HELD");
-//        seat.setHoldExpiresAt(LocalDateTime.now().plusMinutes(15));
-//
-//        Seat updated = seatRepository.save(seat);
-//        return mapToResponse(updated, "Seat held for 15 minutes. Please complete payment.");
-//    }
-//
-//    @Override
-//    public SeatResponse confirmSeat(Long flightId, String seatNumber) {
-//        Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
-//                .orElseThrow(() -> new RuntimeException("Seat not found: " + seatNumber));
-//
-//        // HELD ya already CONFIRMED dono accept karo — idempotent
-//        if (seat.getStatus().equals("CONFIRMED")) {
-//            return mapToResponse(seat, "Seat already confirmed");
-//        }
-//
-//        if (!seat.getStatus().equals("HELD")) {
-//            throw new RuntimeException("Seat " + seatNumber + " is not held. Cannot confirm.");
-//        }
-//
-//        if (seat.getHoldExpiresAt() != null
-//                && seat.getHoldExpiresAt().isBefore(LocalDateTime.now())) {
-//            seat.setStatus("AVAILABLE");
-//            seat.setHoldExpiresAt(null);
-//            seatRepository.save(seat);
-//            throw new RuntimeException("Seat hold expired. Please select the seat again.");
-//        }
-//
-//        seat.setStatus("CONFIRMED");
-//        seat.setHoldExpiresAt(null);
-//
-//        Seat updated = seatRepository.save(seat);
-//        return mapToResponse(updated, "Seat confirmed successfully");
-//    }
-//
-//    @Override
-//    public SeatResponse releaseSeat(Long flightId, String seatNumber) {
-//        Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
-//                .orElseThrow(() -> new RuntimeException("Seat not found: " + seatNumber));
-//
-//        if (seat.getStatus().equals("CONFIRMED")) {
-//            throw new RuntimeException("Confirmed seat cannot be released directly. Please cancel the booking.");
-//        }
-//
-//        seat.setStatus("AVAILABLE");
-//        seat.setHoldExpiresAt(null);
-//
-//        Seat updated = seatRepository.save(seat);
-//        return mapToResponse(updated, "Seat released successfully");
-//    }
-//
-//    @Override
-//    public int getAvailableCount(Long flightId) {
-//        return seatRepository.countByFlightIdAndStatus(flightId, "AVAILABLE");
-//    }
-//
-//    // Har 2 minute mein expired HELD seats release karo
-//    @Scheduled(fixedDelay = 120000)
-//    @Override
-//    public void releaseExpiredHolds() {
-//        List<Seat> expiredSeats = seatRepository
-//                .findByStatusAndHoldExpiresAtBefore("HELD", LocalDateTime.now());
-//
-//        for (Seat seat : expiredSeats) {
-//            seat.setStatus("AVAILABLE");
-//            seat.setHoldExpiresAt(null);
-//            seatRepository.save(seat);
-//            System.out.println("Released expired hold — seat: " + seat.getSeatNumber()
-//                    + " flight: " + seat.getFlightId());
-//        }
-//    }
-//
-//    private SeatResponse mapToResponse(Seat seat, String message) {
-//        SeatResponse res = new SeatResponse();
-//        res.setId(seat.getId());
-//        res.setFlightId(seat.getFlightId());
-//        res.setSeatNumber(seat.getSeatNumber());
-//        res.setSeatClass(seat.getSeatClass());
-//        res.setRow(seat.getRow());
-//        res.setColumn(seat.getColumn());
-//        res.setWindow(seat.isWindow());
-//        res.setAisle(seat.isAisle());
-//        res.setHasExtraLegroom(seat.isHasExtraLegroom());
-//        res.setStatus(seat.getStatus());
-//        res.setPriceMultiplier(seat.getPriceMultiplier());
-//        res.setHoldExpiresAt(seat.getHoldExpiresAt());
-//        res.setMessage(message);
-//        return res;
-//    }
-//}
-
 package com.skybooker.seat.service;
 
 import com.skybooker.seat.dto.SeatRequest;
@@ -185,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -205,7 +30,7 @@ public class SeatServiceImpl implements SeatService {
         if (exists) {
             log.warn("Seat already exists — flightId: {}, seat: {}",
                     request.getFlightId(), request.getSeatNumber());
-            throw new RuntimeException("Seat " + request.getSeatNumber()
+            throw new IllegalArgumentException("Seat " + request.getSeatNumber()
                     + " already exists for flight: " + request.getFlightId());
         }
 
@@ -230,21 +55,21 @@ public class SeatServiceImpl implements SeatService {
     public List<SeatResponse> getSeatsByFlight(Long flightId) {
         log.debug("Fetching all seats for flightId: {}", flightId);
         return seatRepository.findByFlightId(flightId)
-                .stream().map(s -> mapToResponse(s, "Success")).collect(Collectors.toList());
+                .stream().map(s -> mapToResponse(s, "Success")).toList();
     }
 
     @Override
     public List<SeatResponse> getAvailableSeats(Long flightId) {
         log.debug("Fetching seat map for flightId: {}", flightId);
         return seatRepository.findByFlightId(flightId)
-                .stream().map(s -> mapToResponse(s, "Success")).collect(Collectors.toList());
+                .stream().map(s -> mapToResponse(s, "Success")).toList();
     }
 
     @Override
     public List<SeatResponse> getSeatsByClass(Long flightId, String seatClass) {
         log.debug("Fetching {} class seats for flightId: {}", seatClass, flightId);
         return seatRepository.findByFlightIdAndSeatClass(flightId, seatClass)
-                .stream().map(s -> mapToResponse(s, "Success")).collect(Collectors.toList());
+                .stream().map(s -> mapToResponse(s, "Success")).toList();
     }
 
     @Override
@@ -254,12 +79,12 @@ public class SeatServiceImpl implements SeatService {
         Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
                 .orElseThrow(() -> {
                     log.warn("Hold failed — seat not found: {} flightId: {}", seatNumber, flightId);
-                    return new RuntimeException("Seat not found: " + seatNumber);
+                    return new IllegalArgumentException("Seat not found: " + seatNumber);
                 });
 
         if (!seat.getStatus().equals("AVAILABLE")) {
             log.warn("Hold failed — seat not available: {} status: {}", seatNumber, seat.getStatus());
-            throw new RuntimeException("Seat " + seatNumber
+            throw new IllegalStateException("Seat " + seatNumber
                     + " is not available. Current status: " + seat.getStatus());
         }
 
@@ -277,7 +102,7 @@ public class SeatServiceImpl implements SeatService {
         Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
                 .orElseThrow(() -> {
                     log.warn("Confirm failed — seat not found: {} flightId: {}", seatNumber, flightId);
-                    return new RuntimeException("Seat not found: " + seatNumber);
+                    return new IllegalArgumentException("Seat not found: " + seatNumber);
                 });
 
         if (seat.getStatus().equals("CONFIRMED")) {
@@ -287,7 +112,7 @@ public class SeatServiceImpl implements SeatService {
 
         if (!seat.getStatus().equals("HELD")) {
             log.warn("Confirm failed — seat not held: {} status: {}", seatNumber, seat.getStatus());
-            throw new RuntimeException("Seat " + seatNumber + " is not held. Cannot confirm.");
+            throw new IllegalStateException("Seat " + seatNumber + " is not held. Cannot confirm.");
         }
 
         if (seat.getHoldExpiresAt() != null
@@ -296,7 +121,7 @@ public class SeatServiceImpl implements SeatService {
             seat.setStatus("AVAILABLE");
             seat.setHoldExpiresAt(null);
             seatRepository.save(seat);
-            throw new RuntimeException("Seat hold expired. Please select the seat again.");
+            throw new IllegalStateException("Seat hold expired. Please select the seat again.");
         }
 
         seat.setStatus("CONFIRMED");
@@ -311,11 +136,11 @@ public class SeatServiceImpl implements SeatService {
         log.info("Release request — flightId: {}, seat: {}", flightId, seatNumber);
 
         Seat seat = seatRepository.findByFlightIdAndSeatNumber(flightId, seatNumber)
-                .orElseThrow(() -> new RuntimeException("Seat not found: " + seatNumber));
+                .orElseThrow(() -> new IllegalArgumentException("Seat not found: " + seatNumber));
 
         if (seat.getStatus().equals("CONFIRMED")) {
             log.warn("Release rejected — seat is CONFIRMED: {} flightId: {}", seatNumber, flightId);
-            throw new RuntimeException("Confirmed seat cannot be released directly. Please cancel the booking.");
+            throw new IllegalStateException("Confirmed seat cannot be released directly. Please cancel the booking.");
         }
 
         seat.setStatus("AVAILABLE");
